# morphea

./: .gitignore  PRODUCT.md  README.md  idea.md  pyproject.toml
.agents/: product-marketing.md
.claude/: launch.json
.github/workflows/: ci.yml  pages.yml
assets/curated/: suite.json
assets/lucide/: suite.json
docs/: brand-strategy.md  freeform-arc-quality-roadmap.md  freeform-arc-status.md  milestones.md  mlx-sam-runtime.md  plan.md  primitive-quality-roadmap.md  real-image-promotion-v10-roadmap.md  schema.md  sweeps.md
docs/adr/: 0001-semantic-first-editability.md  0002-local-mlx-first.md  0003-strokes-as-first-class-primitives.md  0004-white-cutouts-as-overlay-strokes-v1.md  0005-run-directory-experiment-model.md  0006-training-target-primitive-classifier.md  0007-primitive-anchors-before-general-fitting.md  0008-reviewed-pseudo-label-self-learning.md  0009-runtime-capabilities-over-package-status.md
docs/real-images/: chatgpt-image-2026-06-11.md  primitive-family-map.md  suite.json  (+3 more)
site/: index.html  styles.css
tests/: test_anchors.py  test_classifier.py  test_cli.py  test_comparison.py  test_compatibility.py  test_curated.py  test_dataset.py  test_detection.py  test_diagnostics.py  test_eval.py  test_images.py  test_lucide_model.py  test_lucide_quality.py  test_masks.py  test_primitive_baseline.py  test_primitive_gallery.py  test_primitive_quality.py  test_profiling.py  test_refinement.py  test_rendering.py  test_runs.py  test_scene.py  test_segmenters.py  test_self_learning.py  test_status.py  test_svg_raster.py  test_sweeps.py  test_synthetic.py
(+434 files in other folders)
