[project]
name = "curve"
version = "0.1.0"
description = "Semantic-first raster-to-SVG research prototype"
requires-python = ">=3.12"
dependencies = [
    "pillow>=10",
]

[project.scripts]
curve = "curve.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/curve"]
