[project]
name = "morphea"
version = "0.1.0"
description = "Bitmap-to-vector reconstruction focused on editable SVG form"
requires-python = ">=3.12"
dependencies = [
    "pillow>=10",
]

[project.optional-dependencies]
mlx = [
    "mlx>=0.31",
]
sam = [
    "mlx-sam>=0.3; python_version >= '3.14'",
]

[project.scripts]
morphea = "morphea.cli:main"
curve = "morphea.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/morphea", "src/curve"]
